--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,3 +1,25 @@
-<p>
-  search works!
-</p>
+<div class="row">
+
+    <div class="col">
+
+        <input #termino type="text" (keyup)="buscar(termino.value)" class="form-control" placeholder="Buscar Artista...">
+
+    </div>
+
+</div>
+
+<div class="card-columns m-3">
+
+    <div *ngFor="let artista of artistas" class="card">
+
+        <img class="card-img-top" [src]="artista.images[0].url" alt="Card image cap">
+
+        <div class="card-body">
+
+            <h5 class="card-title"> {{ artista.name }} </h5>
+
+        </div>
+
+    </div>
+
+</div>
