--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -12,7 +12,7 @@
 
     <div *ngFor="let artista of artistas" class="card">
 
-        <img class="card-img-top" [src]="artista.images[0].url" alt="Card image cap">
+        <img class="card-img-top" [src]="artista.images | noimage" alt="Card image cap">
 
         <div class="card-body">
 
