--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
 
     <div *ngFor="let cancion of nuevasCanciones" class="card">
 
-        <img class="card-img-top" [src]="cancion.images[0].url" alt="Card image cap">
+        <img class="card-img-top" [src]="cancion.images | noimage" alt="Card image cap">
 
         <div class="card-body">
 
