--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -8,4 +8,6 @@
 
 </div>
 
-<app-tarjetas [items]="artistas"></app-tarjetas>
+<app-loading *ngIf="loading"></app-loading>
+
+<app-tarjetas *ngIf="!loading" [items]="artistas"></app-tarjetas>
