--- a/src/app/components/tarjetas/tarjetas.component.html
+++ b/src/app/components/tarjetas/tarjetas.component.html
@@ -1,4 +1,4 @@
-<div class="card-columns m-3">
+<div class="card-columns m-3 animated fadeIn">
 
     <div *ngFor="let item of items" class="card">
 
