--- a/src/app/components/shared/loading/loading.component.html
+++ b/src/app/components/shared/loading/loading.component.html
@@ -1,3 +1,7 @@
-<p>
-  loading works!
-</p>
+<div class="row text-center animated fadeIn m-3">
+    <div class="col">
+
+        <i class="fa fa-sync fa-spin fa-5x"></i>
+
+    </div>
+</div>
