--- a/src/app/components/tarjetas/tarjetas.component.html
+++ b/src/app/components/tarjetas/tarjetas.component.html
@@ -1,6 +1,6 @@
 <div class="card-columns m-3 animated fadeIn">
 
-    <div *ngFor="let item of items" class="card">
+    <div (click)="verArtista( item )" *ngFor="let item of items" class="card puntero">
 
         <img class="card-img-top" [src]="item.images | noimage" alt="Card image cap">
 
