--- a/src/app/components/artista/artista.component.html
+++ b/src/app/components/artista/artista.component.html
@@ -35,7 +35,9 @@
                     <td> <img [src]="track.album.images | noimage" class="img-thumb"> </td>
                     <td> {{ track.album.name }} </td>
                     <td> {{ track.name }} </td>
-                    <td> </td>
+                    <td>
+                        <iframe [src]="track.uri | domSeguro" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    </td>
                 </tr>
             </tbody>
         </table>
